data/derived/comb/progs/unify/prog3621.ml.out
Characters 33-48:
  List.map (sepConcat f l) l;;
           ^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a -> 'b
